# PromoDB

./: .gitignore  .tool-versions  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: backend.yml  frontend.yml  workflow.yml
PromoDB/promodb_api/: views.py
PromoDB/promodb_back/: asgi.py  settings.py  wsgi.py
PromoDB/promodb_front/src/: App.svelte
PromoDB/promodb_scrapper/promodb_scrapper/: middlewares.py  settings.py
PromoDB/promodb_scrapper/promodb_scrapper/spiders/: promocoes_steam.py
promodb/: manage.py
promodb-front/: package-lock.json  package.json
promodb/promodb_api/: apps.py  models.py  serializers.py  views.py
promodb/promodb_back/: settings.py  urls.py
promodb/promodb_front/: Dockerfile  package-lock.json
promodb/promodb_front/src/routes/: +page.svelte  +page.ts
promodb/promodb_scrapper/: scrapy.cfg  setup.py  steam_scrap.py
promodb/promodb_scrapper/promodb_scrapper/: items.py  pipelines.py
promodb/promodb_scrapper/promodb_scrapper/spiders/: promocoes_steam.py
promodb/tests/: steam_spider_test.py
promodb_back/promodb_back/: settings.py  urls.py
promodb_front/: Dockerfile  package-lock.json  package.json  vite.config.ts
promodb_front/src/routes/: +page.svelte  +page.ts  Header.svelte
