[project]
name = "PromoDB"
version = "0.1.0"
description = "Backend do PromoDB"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
package-mode = false
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "scrapy (>=2.12.0,<3.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
